5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3994/executions/1791_1619.log
== TEST (2019-05-29 14:12:20) 
-- CODE:
from numpy import*
t = array(eval(input("Digite o tempo: ")))
m = array(eval(input("Digite o modo: ").upper()))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:13:57) 
-- CODE:
from numpy import*
t = array(eval(input("Digite o tempo: ")))
m = array(eval(input("Digite o modo: ").upper()))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:29:23) 
-- CODE:
from numpy import*
t = array(eval(input("Digite o tempo: ")))
m = input("Digite o modo: ").upper()
i=0
while(i<size())



-- ERROR:
File "XXXX", line 5
    while(i<size())
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:29:27) 
-- CODE:
from numpy import*
t = array(eval(input("Digite o tempo: ")))
m = input("Digite o modo: ").upper()
i=0
while(i<size())



-- ERROR:
File "XXXX", line 5
    while(i<size())
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:29:40) 
-- CODE:
from numpy import*
t = array(eval(input("Digite o tempo: ")))
m = input("Digite o modo: ").upper()




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:30:22) 
-- CODE:
from numpy import*
t = array(eval(input("Digite o tempo: ")))
m = input("Digite o modo: ").upper()




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:56:05) 
-- CODE:
from numpy import*
t = array(eval(input("Digite o tempo: ")))
m = input("Digite o modo: ").upper()
i=0
b=0 #quente
b1=0 
c=0 #morno
c1=0
d=0 #frio
d1=0
while(i<size(v)):
	if(m[i]=="QUENTE"):
		b=b+1
		b1=90*0.005
	elif()
		
		
		







-- ERROR:
File "XXXX", line 15
    elif()
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:58:35) 
-- CODE:
from numpy import*
t = array(eval(input("Digite o tempo: ")))
m = input("Digite o modo: ").upper()
i=0
b=0 #quente
b1=0 
c=0 #morno
c1=0
d=0 #frio
d1=0
while(i<size(v)):
	if(m[i]=="QUENTE"):
		b=b+1
		b1=90*0.005
	elif(m[i]=="MORNO"):
		c=c+1
		c1=45*0.005
	elif(m[i]=="FRIO"):
		d=d+1
		d1=0*0.005
i=i+1
print(sum(b1,c1,d1))
		
		
		
		







-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:58:54) 
-- CODE:
from numpy import*
t = array(eval(input("Digite o tempo: ")))
m = input("Digite o modo: ").upper()
i=0
b=0 #quente
b1=0 
c=0 #morno
c1=0
d=0 #frio
d1=0
while(i<size(v)):
	if(m[i]=="QUENTE"):
		b=b+1
		b1=90*0.005
	elif(m[i]=="MORNO"):
		c=c+1
		c1=45*0.005
	elif(m[i]=="FRIO"):
		d=d+1
		d1=0*0.005
i=i+1
print(round(sum(b1,c1,d1),2)
		
		
		
		







-- ERROR:
File "XXXX", line 33
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:59:04) 
-- CODE:
from numpy import*
t = array(eval(input("Digite o tempo: ")))
m = input("Digite o modo: ").upper()
i=0
b=0 #quente
b1=0 
c=0 #morno
c1=0
d=0 #frio
d1=0
while(i<size(v)):
	if(m[i]=="QUENTE"):
		b=b+1
		b1=90*0.005
	elif(m[i]=="MORNO"):
		c=c+1
		c1=45*0.005
	elif(m[i]=="FRIO"):
		d=d+1
		d1=0*0.005
i=i+1
print(round(sum(b1,c1,d1),2)
		
		
		
		







-- ERROR:
File "XXXX", line 33
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:59:29) 
-- CODE:
from numpy import*
t = array(eval(input("Digite o tempo: ")))
m = input("Digite o modo: ").upper()
i=0
b=0 #quente
b1=0 
c=0 #morno
c1=0
d=0 #frio
d1=0
while(i<size(v)):
	if(m[i]=="QUENTE"):
		b=b+1
		b1=90*0.005
	elif(m[i]=="MORNO"):
		c=c+1
		c1=45*0.005
	elif(m[i]=="FRIO"):
		d=d+1
		d1=0*0.005
i=i+1
k= sum(b1,c1,d1)
print(round(k,2)
		
		
		
		







-- ERROR:
File "XXXX", line 34
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:59:41) 
-- CODE:
from numpy import*
t = array(eval(input("Digite o tempo: ")))
m = input("Digite o modo: ").upper()
i=0
b=0 #quente
b1=0 
c=0 #morno
c1=0
d=0 #frio
d1=0
while(i<size(v)):
	if(m[i]=="QUENTE"):
		b=b+1
		b1=90*0.005
	elif(m[i]=="MORNO"):
		c=c+1
		c1=45*0.005
	elif(m[i]=="FRIO"):
		d=d+1
		d1=0*0.005
i=i+1
k= sum(b1,c1,d1)
print(round(k,2)
		
		
		
		







-- ERROR:
File "XXXX", line 34
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:59:50) 
-- CODE:
from numpy import*
t = array(eval(input("Digite o tempo: ")))
m = input("Digite o modo: ").upper()
i=0
b=0 #quente
b1=0 
c=0 #morno
c1=0
d=0 #frio
d1=0
while(i<size(v)):
	if(m[i]=="QUENTE"):
		b=b+1
		b1=90*0.005
	elif(m[i]=="MORNO"):
		c=c+1
		c1=45*0.005
	elif(m[i]=="FRIO"):
		d=d+1
		d1=0*0.005
	i=i+1
k= sum(b1,c1,d1)
print(round(k,2)
		
		
		
		







-- ERROR:
File "XXXX", line 34
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:59:57) 
-- CODE:
from numpy import*
t = array(eval(input("Digite o tempo: ")))
m = input("Digite o modo: ").upper()
i=0
b=0 #quente
b1=0 
c=0 #morno
c1=0
d=0 #frio
d1=0
while(i<size(v)):
	if(m[i]=="QUENTE"):
		b=b+1
		b1=90*0.005
	elif(m[i]=="MORNO"):
		c=c+1
		c1=45*0.005
	elif(m[i]=="FRIO"):
		d=d+1
		d1=0*0.005
i=i+1
k= sum(b1,c1,d1)
print(round(k,2)
		
		
		
		







-- ERROR:
File "XXXX", line 34
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:59:58) 
-- CODE:
from numpy import*
t = array(eval(input("Digite o tempo: ")))
m = input("Digite o modo: ").upper()
i=0
b=0 #quente
b1=0 
c=0 #morno
c1=0
d=0 #frio
d1=0
while(i<size(v)):
	if(m[i]=="QUENTE"):
		b=b+1
		b1=90*0.005
	elif(m[i]=="MORNO"):
		c=c+1
		c1=45*0.005
	elif(m[i]=="FRIO"):
		d=d+1
		d1=0*0.005
i=i+1
k= sum(b1,c1,d1)
print(round(k,2)
		
		
		
		







-- ERROR:
File "XXXX", line 34
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:59:58) 
-- CODE:
from numpy import*
t = array(eval(input("Digite o tempo: ")))
m = input("Digite o modo: ").upper()
i=0
b=0 #quente
b1=0 
c=0 #morno
c1=0
d=0 #frio
d1=0
while(i<size(v)):
	if(m[i]=="QUENTE"):
		b=b+1
		b1=90*0.005
	elif(m[i]=="MORNO"):
		c=c+1
		c1=45*0.005
	elif(m[i]=="FRIO"):
		d=d+1
		d1=0*0.005
i=i+1
k= sum(b1,c1,d1)
print(round(k,2)
		
		
		
		







-- ERROR:
File "XXXX", line 34
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:59:58) 
-- CODE:
from numpy import*
t = array(eval(input("Digite o tempo: ")))
m = input("Digite o modo: ").upper()
i=0
b=0 #quente
b1=0 
c=0 #morno
c1=0
d=0 #frio
d1=0
while(i<size(v)):
	if(m[i]=="QUENTE"):
		b=b+1
		b1=90*0.005
	elif(m[i]=="MORNO"):
		c=c+1
		c1=45*0.005
	elif(m[i]=="FRIO"):
		d=d+1
		d1=0*0.005
i=i+1
k= sum(b1,c1,d1)
print(round(k,2)
		
		
		
		







-- ERROR:
File "XXXX", line 34
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:59:59) 
-- CODE:
from numpy import*
t = array(eval(input("Digite o tempo: ")))
m = input("Digite o modo: ").upper()
i=0
b=0 #quente
b1=0 
c=0 #morno
c1=0
d=0 #frio
d1=0
while(i<size(v)):
	if(m[i]=="QUENTE"):
		b=b+1
		b1=90*0.005
	elif(m[i]=="MORNO"):
		c=c+1
		c1=45*0.005
	elif(m[i]=="FRIO"):
		d=d+1
		d1=0*0.005
i=i+1
k= sum(b1,c1,d1)
print(round(k,2)
		
		
		
		







-- ERROR:
File "XXXX", line 34
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:59:59) 
-- CODE:
from numpy import*
t = array(eval(input("Digite o tempo: ")))
m = input("Digite o modo: ").upper()
i=0
b=0 #quente
b1=0 
c=0 #morno
c1=0
d=0 #frio
d1=0
while(i<size(v)):
	if(m[i]=="QUENTE"):
		b=b+1
		b1=90*0.005
	elif(m[i]=="MORNO"):
		c=c+1
		c1=45*0.005
	elif(m[i]=="FRIO"):
		d=d+1
		d1=0*0.005
i=i+1
k= sum(b1,c1,d1)
print(round(k,2)
		
		
		
		







-- ERROR:
File "XXXX", line 34
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:59:59) 
-- CODE:
from numpy import*
t = array(eval(input("Digite o tempo: ")))
m = input("Digite o modo: ").upper()
i=0
b=0 #quente
b1=0 
c=0 #morno
c1=0
d=0 #frio
d1=0
while(i<size(v)):
	if(m[i]=="QUENTE"):
		b=b+1
		b1=90*0.005
	elif(m[i]=="MORNO"):
		c=c+1
		c1=45*0.005
	elif(m[i]=="FRIO"):
		d=d+1
		d1=0*0.005
i=i+1
k= sum(b1,c1,d1)
print(round(k,2)
		
		
		
		







-- ERROR:
File "XXXX", line 34
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:00:35) 
-- CODE:
from numpy import*
t = array(eval(input("Digite o tempo: ")))
m = input("Digite o modo: ").upper()
i=0
b=0 #quente
b1=0 
c=0 #morno
c1=0
d=0 #frio
d1=0
while(i<size(v)):
	if(m[i]=="QUENTE"):
		b=b+1
		b1=90*0.005
	elif(m[i]=="MORNO"):
		c=c+1
		c1=45*0.005
	elif(m[i]=="FRIO"):
		d=d+1
		d1=0*0.005
i=i+1
k= sum(b1,c1,d1)
print(round(k,2)
-- ERROR:
File "XXXX", line 24
    
                    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:01:01) 
-- CODE:
from numpy import*
t = array(eval(input("Digite o tempo: ")))
m = input("Digite o modo: ").upper()
i=0
b=0 #quente
b1=0 
c=0 #morno
c1=0
d=0 #frio
d1=0
while(i<size(v)):
	if(m[i]=="QUENTE"):
		b=b+1
		b1=90*0.005
	elif(m[i]=="MORNO"):
		c=c+1
		c1=45*0.005
	elif(m[i]=="FRIO"):
		d=d+1
		d1=0*0.005
i=i+1
k= sum(b1,c1,d1)
	print(round(k,2)
-- ERROR:
File "XXXX", line 23
    print(round(k,2)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:01:14) 
-- CODE:
from numpy import*
t = array(eval(input("Digite o tempo: ")))
m = input("Digite o modo: ").upper()
i=0
b=0 #quente
b1=0 
c=0 #morno
c1=0
d=0 #frio
d1=0
while(i<size(v)):
	if(m[i]=="QUENTE"):
		b=b+1
		b1=90*0.005
	elif(m[i]=="MORNO"):
		c=c+1
		c1=45*0.005
	elif(m[i]=="FRIO"):
		d=d+1
		d1=0*0.005
i=i+1
k= sum(b1,c1,d1)
print(round(k,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:01:36) 
-- CODE:
from numpy import*
t = array(eval(input("Digite o tempo: ")))
m = input("Digite o modo: ").upper()
i=0
b=0 #quente
b1=0 
c=0 #morno
c1=0
d=0 #frio
d1=0
while(i<size(v)):
	if(m[i]=="QUENTE"):
		b=b+1
		b1=90*0.005
	elif(m[i]=="MORNO"):
		c=c+1
		c1=45*0.005
	elif(m[i]=="FRIO"):
		d=d+1
		d1=0*0.005
i=i+1
k= sum(b1,c1,d1)
print(round(k,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:02:15) 
-- CODE:
from numpy import*
t = array(eval(input("Digite o tempo: ")))
m = input("Digite o modo: ").upper()
i=0
b=0 #quente
b1=0 
c=0 #morno
c1=0
d=0 #frio
d1=0
while(i<size(t)):
	if(m[i]=="QUENTE"):
		b=b+1
		b1=90*0.005
	elif(m[i]=="MORNO"):
		c=c+1
		c1=45*0.005
	elif(m[i]=="FRIO"):
		d=d+1
		d1=0*0.005
i=i+1
k= sum(b1,c1,d1)
print(round(k,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:03:57) 
-- CODE:
from numpy import*
t = array(eval(input("Digite o tempo: ")))
m = input("Digite o modo: ").upper()
i=0
b=0 #quente
b1=0 
c=0 #morno
c1=0
d=0 #frio
d1=0
while(i<size(t)):
	if(m[i]=="QUENTE"):
		b=b+1
		b1=90*0.005
	elif(m[i]=="MORNO"):
		c=c+1
		c1=45*0.005
	elif(m[i]=="FRIO"):
		d=d+1
		d1=0*0.005
i=i+1
k= sum(b1,c1,d1)
print(round(k,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:04:41) 
-- CODE:
from numpy import*
t = array(eval(input("Digite o tempo: ")))
m = input("Digite o modo: ").upper()
i=0
b=0 #quente
b1=0 
c=0 #morno
c1=0
d=0 #frio
d1=0
while(i<size(t)):
	if(m[i]=="QUENTE"):
		b=b+1
		b1=90*0.005
	elif(m[i]=="MORNO"):
		c=c+1
		c1=45*0.005
	elif(m[i]=="FRIO"):
		d=d+1
		d1=0*0.005
	i=i+1
k= sum(b1,c1,d1)
print(round(k,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:05:38) 
-- CODE:
from numpy import*
t = array(eval(input("Digite o tempo: ")))
m = input("Digite o modo: ").upper()
i=0
b=0 #quente
b1=0 
c=0 #morno
c1=0
d=0 #frio
d1=0
while(i<size(t)):
	if(m[i]=="QUENTE"):
		b=b+1
		b1=90*0.005
	elif(m[i]=="MORNO"):
		c=c+1
		c1=45*0.005
	elif(m[i]=="FRIO"):
		d=d+1
		d1=0*0.005
	i=i+1
	k= sum(b1,c1,d1)
print(round(k,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:08:12) 
-- CODE:
from numpy import*
t = array(eval(input("Digite o tempo: ")))
m = input("Digite o modo: ").upper()
i=0
b=0 #quente
b1=0 
c=0 #morno
c1=0
d=0 #frio
d1=0
while(i<size(t)):
	if(m[i]=="QUENTE"):
		b=b+1
		b1=90*0.005
	elif(m[i]=="MORNO"):
		c=c+1
		c1=45*0.005
	elif(m[i]=="FRIO"):
		d=d+1
		d1=0*0.005
	i=i+1
	k = sum(i)
print(round(k,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:08:26) 
-- CODE:
from numpy import*
t = array(eval(input("Digite o tempo: ")))
m = input("Digite o modo: ").upper()
i=0
b=0 #quente
b1=0 
c=0 #morno
c1=0
d=0 #frio
d1=0
while(i<size(t)):
	if(m[i]=="QUENTE"):
		b=b+1
		b1=90*0.005
	elif(m[i]=="MORNO"):
		c=c+1
		c1=45*0.005
	elif(m[i]=="FRIO"):
		d=d+1
		d1=0*0.005
	i=i+1
	k = sum(i)
print(round(k,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:08:52) 
-- CODE:
from numpy import*
t = array(eval(input("Digite o tempo: ")))
m = input("Digite o modo: ").upper()
i=0
b=0 #quente
b1=0 
c=0 #morno
c1=0
d=0 #frio
d1=0
while(i<size(t)):
	if(m[i]=="QUENTE"):
		b=b+1
		b1=90*0.005
	elif(m[i]=="MORNO"):
		c=c+1
		c1=45*0.005
	elif(m[i]=="FRIO"):
		d=d+1
		d1=0*0.005
	i=i+1
	k = sum(i)
print(round(k,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:25:18) 
-- CODE:
from numpy import*
t = array(eval(input("Digite o tempo: ")))
m = array(eval(input("Digite o modo: ").upper()
i=0
b=0 #quente
b1=0 
c=0 #morno
c1=0
d=0 #frio
d1=0
while(i<size(t)):
	if(m[i]=="QUENTE"):
		b=b+1
		b1=90*0.005
	elif(m[i]=="MORNO"):
		c=c+1
		c1=45*0.005
	elif(m[i]=="FRIO"):
		d=d+1
		d1=0*0.005
	i=i+1
	k = sum(i)
print(round(k,2))
-- ERROR:
File "XXXX", line 4
    i=0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:25:34) 
-- CODE:
from numpy import*
t = array(eval(input("Digite o tempo: ")))
m = array(eval(input("Digite o modo: "))).upper()
i=0
b=0 #quente
b1=0 
c=0 #morno
c1=0
d=0 #frio
d1=0
while(i<size(t)):
	if(m[i]=="QUENTE"):
		b=b+1
		b1=90*0.005
	elif(m[i]=="MORNO"):
		c=c+1
		c1=45*0.005
	elif(m[i]=="FRIO"):
		d=d+1
		d1=0*0.005
	i=i+1
	k = sum(i)
print(round(k,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
